# final-project-level3-nlp-06

./: .gitignore  README.md  config.yaml.template  hate_purificate_parallel_dataset.csv  inference.py  inference_config.yaml.template  main.py
API/GenerationAPI/: main.py  model.py  predownload.py  readme.md
API/generation_api/: pyproject.toml  requirements.txt  start.sh
classification/: config.yaml.template  inference.py  inference_config.yaml.template  main.py  train.py
classification/data/: __init__.py  dataset.py  span_dataset.py
classification/model/: __init__.py  bert_model.py  cnn_model.py  span_cnn_model.py
classification/trainer/: __init__.py  cnn_trainer.py  span_cnn_trainer.py  torch_trainer.py  transformer_trainer.py
classification/utils/: metrics.py
classificationAPI/: app.py  config.yaml.template
classificationAPI/model/: __init__.py  model.py
data/: __init__.py  dataset.py
frontend/src/: App.jsx  theme.js
frontend/src/components/: StateBox.jsx
frontend/src/data/: mockData.js  mockGeoFeatures.js
generation/: config.yaml.template  dataset.py  reward_util.py  train.py
generation/instructBart/fine_tuning/: data.py  fine_tuning.py
generation/instructBart/human_feedback/: human_next_token_v.py  (+3 more)
generation/thank_you_bart/: reward_util.py
mlm_pretraining/: config.yaml.template  train.py
mlm_pretraining/data/: __init__.py  dataset.py
mlm_pretraining/model/: __init__.py
retriever/: config.yaml.template  main.py  trainer.py
retriever/dataset/: __init__.py  retriever_dataset.py
utils/: __init__.py  inference_utils.py  metrics.py
(+4 files in other folders)
